[package]

name = "piston-dependencies-test"
version = "0.0.0"
authors = ["TyOverby <ty@pre-alpha.com>"]

[dependencies.piston-dependencies]

path = "https://github.com/TyOverby/piston-dependencies.git"

[dependencies.sdl2_game_window]

git = "https://github.com/PistonDevelopers/sdl2_game_window.git"

[[bin]]
name = "dummy"
path = "./dummy.rs"
