[package]

name = "piston-dependencies-test"
version = "0.0.0"
authors = ["TyOverby <ty@pre-alpha.com>"]

build = "LD_LIBRARY_PATH=\"./target/deps/:$LD_LIBRARY_PATH\""

[dependencies.piston-dependencies]

git = "https://github.com/TyOverby/piston-dependencies.git"

[dependencies.glfw_game_window]

git = "https://github.com/PistonDevelopers/glfw_game_window.git"

[[bin]]
name = "dummy"
path = "./dummy.rs"
